some update in nav2

--- a/src/App.css
+++ b/src/App.css
@@ -56,5 +56,9 @@
     box-shadow: none !important;
   }
   
+button:hover {
+  background-color: rgb(50, 50, 183);
+  color: white;
 
+}
   /* floor End */
